<resources>
    <string name="app_name">TeamBHomework3</string>
    <string name="my_profile">My Profile</string>
    <string name="my_info">My Info</string>
    <string name="my_previous_orders">My Previous Orders</string>
    <string name="my_addresses">My Addresses</string>
    <string name="about_application">About application</string>
    <string name="change_theme">Change Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="restaurants">Restaurants</string>
    <string name="foods">Foods</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="info_message">This is the third homework of Yemeksepeti Android Developer Bootcamp.\n\nPatika.dev/Kodluyoruz</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <string name="food_image_url">Food Image URL</string>
    <string name="food_description">Food Description</string>

    <string name="thanks">Thanks for your preview.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_onboarding_1">Welcome to Yemek.com App !</string>
    <string name="description_onboarding_1">Welcome to the food ordering application we prepared for the Kodluyoruz bootcamp.</string>

</resources>